# superclaim

./: .cursorrules  .dockerignore  .env.example  .gitignore  DEPLOY-RAILWAY.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt
.github/: pull_request_template.md
alembic/: env.py
app/: __init__.py  celery_app.py  config.py  database.py  main.py  network.py  security.py
dashboard/: .env.local.example  .gitignore  middleware.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts
docs/: RAILWAY-DASHBOARD-TUTORIAL.md  RAILWAY-WORKER-TUTORIAL.md
railway/: README.md
scripts/: check_compat.py  docker-entrypoint.sh  preflight.sh  seed_superadmin.py  seed_tenant.py  start-dev.ps1
superclaim-web/: README.md  middleware.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts
tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_claim_pipeline.py  test_claims_api.py  test_core_security.py  test_credential_service_crud.py  test_credentials_api.py  test_data_models.py  test_decision_service.py  test_device_service_crud.py  test_devices_api.py  test_duplicate_service.py  test_fraud_service.py  test_health.py  test_network.py  test_ocr_service.py  test_policies_api.py  test_policy_engine.py  test_policy_service_crud.py  test_public_claim_api.py  test_results_schema.py  test_schemas.py  test_security.py  test_sessions_7_11.py  test_storage_service.py  test_team_api.py  test_team_service_crud.py  (+1 more)
(+161 files in other folders)
