[project]
name = "superclaim"
version = "0.2.0"
description = "SuperClaim.ai - multi-tenant B2B AI warranty claims engine"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "B008",  # FastAPI uses function calls (Depends/Query) in argument defaults
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
warn_redundant_casts = true
check_untyped_defs = true
exclude = ["alembic/", "tests/"]

[[tool.mypy.overrides]]
module = ["app.services.*", "app.tasks.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
